--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "isha-event-registration"
+    "default": "isha-event-registration",
+    "staging": "eventscheckin-9550f",
+    "ishaEventsTags": "eventscheckin-9550f",
+    "ishaProgramTags": "megaprogramtags"
   }
 }
